--- a/style.css
+++ b/style.css
@@ -97,3 +97,47 @@ img {
   /* object-fit: cover; */
 
 }
+
+/* Bagian DUA */
+
+.dua {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: 35px 140px 35px 140px;
+  font-family: Roboto;
+}
+
+.judul-dua {
+  color: #1f2937;
+  font-size: 36px;
+  font-weight: 900;
+  padding-bottom: 40px;
+}
+
+.dua-kontainer {
+  color: #1f2937;
+  display: flex;
+  flex-direction: row;
+  gap: 25px;
+  margin-left: 150px;
+  margin-right: 150px;
+  margin-bottom: 50px;
+
+}
+
+.sub-kontainer-satu {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+}
+
+.kotak-gambar {
+  background-color: rgb(255, 255, 255);
+  border-radius: 25px;
+  border: 3px solid #3882f6;
+  flex: 1;
+  padding: 80px;
+  
+}
