--- a/style.css
+++ b/style.css
@@ -125,14 +125,13 @@ img {
   margin-left: 150px;
   margin-right: 150px;
   margin-bottom: 50px;
-
-}
-
-.sub-kontainer-satu {
-  display: flex;
-  flex-direction: column;
   text-align: center;
+
 }
+
+.keterangan-gambar {
+}
+
 
 .kotak-gambar {
   background-color: rgb(255, 255, 255);
